--- a/main.html
+++ b/main.html
@@ -8,9 +8,46 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+    <script type="text/javascript" src="./script.js"></script>
 
+	<table>
+		<thead>
+			<tr>
+				<th>Part</th>
+				<th>XS</th>
+				<th>S</th>
+				<th>M</th>
+				<th>L</th>
+				<th>XL</th>
+			</tr>
+		</thead>
+		<tbody>
+			<tr>
+				<td>Waist</td>
+				<td class="right">25</td>
+				<td class="right">28</td>
+				<td class="right">30</td>
+				<td class="right">31</td>
+				<td class="right">32</td>
+			</tr>
+			<tr>
+				<td>Chest</td>
+				<td class="right">34</td>
+				<td class="right">34</td>
+				<td class="right">38</td>
+				<td class="right">40</td>
+				<td class="right">41</td>
+			</tr>
+			<tr>
+				<td>Sleeve</td>
+				<td class="right">23</td>
+				<td class="right">24</td>
+				<td class="right">24</td>
+				<td class="right">25</td>
+				<td class="right">25</td>
+			</tr>
+		</tbody>
+	</table>
 </body>
 
 </html>
